Changed division symbol

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <!-- Top row -->
                 <div id="clear" class="display">Clear</div>
                 <div id="undo" class="display">Undo</div>
-                <div class="operators">/</div>  
+                <div class="operators">÷</div>  
                 <!-- Second row -->
                 <div class="numbers">7</div>
                 <div class="numbers">8</div>
